force-app/main/default/objects/GTM_Assessment_Gate__mdt/GTM_Assessment_Gate__mdt.object-meta.xml
<CustomObject>
    <label>GTM Assessment Gate</label>
    <pluralLabel>GTM Assessment Gates</pluralLabel>
</CustomObject>