force-app/main/default/objects/GTM_Assessment_Gate__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Inactive gates are never evaluated.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>