force-app/main/default/objects/GTM_Assessment_Gate__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <description>Stable identifier for the gate, used in Assessment_Flags__c and in tests.</description>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>