force-app/main/default/objects/GTM_Assessment_Gate__mdt/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <label>Rationale</label>
    <description>Why this gate exists, citing source file paths.</description>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>