force-app/main/default/objects/GTM_Assessment_Gate__mdt/fields/Readout_Block__c.field-meta.xml
<CustomField>
    <fullName>Readout_Block__c</fullName>
    <label>Readout Block</label>
    <description>The paragraph rendered on the readout when this gate fires.</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>