force-app/main/default/objects/GTM_Assessment_Gate__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <description>blocker, major or minor. Ordering and emphasis only; it never touches the score.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>blocker</fullName>
                <default>true</default>
                <label>blocker</label>
            </value>
            <value>
                <fullName>major</fullName>
            </value>
            <value>
                <fullName>minor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>