force-app/main/default/objects/GTM_Assessment_Gate__mdt/fields/Tier_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Tier_Qualifier__c</fullName>
    <label>Tier Qualifier</label>
    <description>The phrase appended to the tier when this gate fires, e.g. foundation-gated. A QUALIFIER, not a change: Fast-Track and foundation-gated together is a legitimate and common result, and the readout has to say both at once.</description>
    <type>Text</type>
    <length>120</length>
</CustomField>